
  * Thiemo Seufer
    - "make reallyclean" should really clean.
  * Kenshi Muto
    - Add "getallpo.sh" and run this in Makefile. This program collects
      all of po messages and dump to po.utf. po.utf will merge into all-*.utf.
  * Joey Hess
    - Add fakeroot to build-depends, as the debian/rules uses it in the build
      target. Should fix FTBFS on mips.

 -- Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>  Wed, 24 Dec 2003 15:38:45 +0100

debian-installer (20031223) unstable; urgency=low

  * Joey Hess
    - Generate bootable hd-media images, not just the initrd.
      These can be written directly the usb memory stick, then mounted
      and a d-i iso copied in. As they're quite big (and sparse),
      they are gzipped.
    - NB: The above change means you need 128+ mb more free space to
      build this package on i386.
    - If System.map is included in the kernel image udeb, pass it to depmod
      via -F and delete it when done. This is to support building on systems
      running 2.6.
    - Remove ide modules stuff from net drivers floppy. I don't know why it
      was there, but its deps were not met and this could cause ugly messages 
      during install.
    - Remove the same ide modules from i386 netboot.
    - Document the bootkbd boot parameter in syslinux f7.txt.
    - Add "expert" mode boot to syslinux, which sets DEBCONF_PRIORITY=low.
    - Include a doc/index.en.html in the install-images tarball, so
      debian-cd will find some documentation and not include the boot floppies
      docs.
    - Include INSTALLATION-HOWTO there too, by way of a gross, gross hack.
    - netcfg reorg
    - scsi-common-modules reorg
    - Grep out several encodings that confuse reduce-font:
      ISO-8859-*, EUC-JP, CP1251. This is a temporary hackaround to get it
      building again.
    - Access floppy filled up, so move the network stuff to the access_drivers
      floppy. That filled up access_drivers, so comment out SCSI support at
      least for now.