@@ -8,6 +8,7 @@ debian-installer (20031224) UNRELEASED; urgency=low
   * Joey Hess
     - Add fakeroot to build-depends, as the debian/rules uses it in the build
       target. Should fix FTBFS on mips.
+    - Don't put docs under images/, so debian-cd will find them.
 
  -- Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>  Wed, 24 Dec 2003 15:38:45 +0100
 
